notebooks spotify api

--- a/Notebooks/5 - Robust Query Search.ipynb
+++ b/Notebooks/5 - Robust Query Search.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = 'f6199291e44c4ab8b55e24ae9973c235'\n",
-    "client_secret = '9777424ef1e54fbea098f1032f8fa7f5'"
+    "client_id = ''\n",
+    "client_secret = ''"
    ]
   },
   {
